rm site/src/lib/PrevNextSite.svelte
replace with PrevNext from svelte-zoo
update deps incl TS 5 RC to use moduleResolution: 'bundler'

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
           cache-dependency-path: site/package.json
 
       - name: Install dependencies
-        run: cd site && npm install
+        run: cd site && npm install --force
 
       - name: Build site
         run: cd site && npm run build
