--- a/site/package.json
+++ b/site/package.json
@@ -21,11 +21,11 @@
     "@playwright/test": "^1.31.2",
     "@rollup/plugin-yaml": "^4.0.1",
     "@sveltejs/adapter-static": "^2.0.1",
-    "@sveltejs/kit": "^1.10.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@sveltejs/kit": "^1.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.35.0",
+    "eslint": "^8.36.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^8.0.0",
@@ -33,14 +33,14 @@
     "marked": "^4.2.12",
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
-    "puppeteer": "^19.7.3",
-    "svelte": "^3.55.1",
-    "svelte-check": "^3.0.4",
-    "svelte-multiselect": "^8.4.0",
-    "svelte-preprocess": "^5.0.1",
-    "svelte-zoo": "^0.3.4",
-    "svelte2tsx": "^0.6.2",
-    "typescript": "^4.9.5",
+    "puppeteer": "^19.7.5",
+    "svelte": "^3.56.0",
+    "svelte-check": "^3.1.4",
+    "svelte-multiselect": "^8.5.0",
+    "svelte-preprocess": "^5.0.2",
+    "svelte-zoo": "^0.4.3",
+    "svelte2tsx": "^0.6.9",
+    "typescript": "5.0.1-rc",
     "vite": "^4.1.4"
   },
   "keywords": [
