--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,7 +48,7 @@ repos:
     rev: v2.2.4
     hooks:
       - id: codespell
-        args: [--ignore-words-list, ons]
+        args: [--ignore-words-list, 'ons,linz']
         stages: [commit, commit-msg]
 
   - repo: https://github.com/pre-commit/mirrors-eslint
