--- a/sites.yml
+++ b/sites.yml
@@ -810,3 +810,21 @@
   tags: [agile team health, agile spotify, team health check]
   date_created: 2023-05-05
   date_added: 2023-05-14
+
+- title: SvelteLab
+  url: https://sveltelab.dev
+  repo: https://github.com/sveltelab/sveltelab
+  description: Supercharged REPL for Svelte (think StackBlitz specialized for Svelte)
+  uses:
+    - Playwright
+    - vitest
+    - Iconify
+    - Marked
+    - TypeScript
+    - PNPM
+    - Pocketbase
+    - Vercel
+    - Tailwind
+  tags: [repl, playground]
+  date_created: 2023-02-23
+  date_added: 2023-05-21
