--- a/tools.yml
+++ b/tools.yml
@@ -48,6 +48,7 @@ liveblocks: https://liveblocks.io
 lodash: https://lodash.com
 mapbox: https://mapbox.com
 markedjs: https://marked.js.org
+matter.js: https://brm.io/matter-js
 mdsvex: https://github.com/pngwn/MDsveX
 mdsvexamples: https://github.com/mattjennings/mdsvexamples
 mocha: https://mochajs.org
@@ -55,6 +56,7 @@ monaco: https://microsoft.github.io/monaco-editor
 motion one: https://motion.dev
 mvp.css: https://github.com/andybrewer/mvp
 netlify: https://netlify.com
+notion: https://notion.so
 octokit: https://github.com/octokit/octokit.js
 ogl: https://github.com/oframe/ogl
 panzoom: https://github.com/timmywil/panzoom
@@ -76,6 +78,7 @@ sass: https://sass-lang.com
 scss: https://sass-lang.com/documentation/syntax
 smui: https://sveltematerialui.com
 spotify web api: https://github.com/JMPerez/spotify-web-api-js
+storyblock: https://storyblok.com
 storybook: https://storybook.js.org
 supabase: https://supabase.com
 surge.sh: https://surge.sh
