--- a/site/package.json
+++ b/site/package.json
@@ -17,29 +17,30 @@
     "test": "playwright test tests/*.test.ts"
   },
   "devDependencies": {
-    "@iconify/svelte": "^3.1.3",
-    "@playwright/test": "^1.34.3",
-    "@rollup/plugin-yaml": "^4.1.0",
+    "@iconify/svelte": "^3.1.4",
+    "@playwright/test": "^1.35.1",
+    "@rollup/plugin-yaml": "^4.1.1",
     "@sveltejs/adapter-static": "^2.0.2",
-    "@sveltejs/kit": "^1.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "dotenv": "^16.1.3",
-    "eslint": "^8.41.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "@sveltejs/kit": "^1.21.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.44.0",
+    "eslint-plugin-svelte": "^2.32.2",
     "js-yaml": "^4.1.0",
-    "marked": "^5.0.4",
+    "marked": "^5.1.0",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
-    "puppeteer": "^20.5.0",
+    "puppeteer": "^20.7.4",
     "sharp": "^0.32.1",
-    "svelte": "4.0.0-next.0",
-    "svelte-check": "^3.4.3",
-    "svelte-multiselect": "^8.6.2",
+    "svelte": "4.0.1",
+    "svelte-check": "^3.4.4",
+    "svelte-eslint-parser": "^0.32.0",
+    "svelte-multiselect": "^9.0.0",
     "svelte-preprocess": "^5.0.4",
-    "svelte-zoo": "^0.4.6",
-    "svelte2tsx": "^0.6.15",
-    "typescript": "5.0.4",
+    "svelte-zoo": "^0.4.8",
+    "svelte2tsx": "^0.6.16",
+    "typescript": "5.1.6",
     "vite": "^4.3.9"
   },
   "keywords": [
