--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -1588,8 +1588,9 @@
   repo: https://github.com/janosh/elementari
   npm: https://npmjs.com/package/elementari
   description: >-
-    Interactive periodic table of elements written in Svelte. Supports plotting
-    heat maps and hover data.
+    Interactive visualizations for materials science: periodic tables, 3d
+    crystal structures (Molecules coming soon), Bohr atoms, nuclei, heatmaps,
+    scatter plots.
   uses:
     - TypeScript
     - pre-commit
